# Fun-ASR-GGUF

./: .dockerignore  .gitignore  01-Export-Encoder-Adaptor-CTC.py  01-Export-ONNX-FP32.py  02-Optimize-ONNX.py  02-Quantize-ONNX.py  03-Export-Decoder-GGUF.py  03-Quantize-ONNX.py  04-Export-Decoder-GGUF-FP16.py  04-Inference.py  05-Quantize-Decoder-GGUF.py  06-Inference.py  Dockerfile  README.md  batch_transcribe.py  demo1.py  export_config.py  infer.py  main.py  pyproject.toml  requirements.txt  run.sh  test_hotwords.sh
config/: settings.py
core/: config.py
fun_asr_gguf/: __init__.py  llama.py  nano_ctc.py  nano_dataclass.py  prompt_utils.py  srt_utils.py  text_merge.py
fun_asr_gguf/core/: decoder.py  orchestrator.py
fun_asr_gguf/export/: model_definition.py
fun_asr_gguf/inference/: __init__.py  asr_engine.py  ctc.py  encoder.py  llama.py  models.py  schema.py  srt_utils.py  text_merge.py
fun_asr_gguf/inference/core/: decoder.py  model_manager.py  orchestrator.py
routers/: __init__.py  asr_router.py
services/: __init__.py  asr_service.py
